; ModuleID = '/home/carl/AnghaBench/git/extr_merge-recursive.c_handle_modify_delete.c'
source_filename = "/home/carl/AnghaBench/git/extr_merge-recursive.c_handle_modify_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.merge_options = type { i8*, i8* }
%struct.diff_filespec = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"modify\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"modified\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.merge_options*, i8*, %struct.diff_filespec*, %struct.diff_filespec*, %struct.diff_filespec*)* @handle_modify_delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_modify_delete(%struct.merge_options* %0, i8* %1, %struct.diff_filespec* %2, %struct.diff_filespec* %3, %struct.diff_filespec* %4) #0 {
  %6 = alloca %struct.merge_options*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.diff_filespec*, align 8
  %9 = alloca %struct.diff_filespec*, align 8
  %10 = alloca %struct.diff_filespec*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca %struct.diff_filespec*, align 8
  store %struct.merge_options* %0, %struct.merge_options** %6, align 8
  store i8* %1, i8** %7, align 8
  store %struct.diff_filespec* %2, %struct.diff_filespec** %8, align 8
  store %struct.diff_filespec* %3, %struct.diff_filespec** %9, align 8
  store %struct.diff_filespec* %4, %struct.diff_filespec** %10, align 8
  %14 = load %struct.diff_filespec*, %struct.diff_filespec** %9, align 8
  %15 = call i64 @is_valid(%struct.diff_filespec* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %25

17:                                               ; preds = %5
  %18 = load %struct.merge_options*, %struct.merge_options** %6, align 8
  %19 = getelementptr inbounds %struct.merge_options, %struct.merge_options* %18, i32 0, i32 0
  %20 = load i8*, i8** %19, align 8
  store i8* %20, i8** %11, align 8
  %21 = load %struct.merge_options*, %struct.merge_options** %6, align 8
  %22 = getelementptr inbounds %struct.merge_options, %struct.merge_options* %21, i32 0, i32 1
  %23 = load i8*, i8** %22, align 8
  store i8* %23, i8** %12, align 8
  %24 = load %struct.diff_filespec*, %struct.diff_filespec** %9, align 8
  store %struct.diff_filespec* %24, %struct.diff_filespec** %13, align 8
  br label %33

25:                                               ; preds = %5
  %26 = load %struct.merge_options*, %struct.merge_options** %6, align 8
  %27 = getelementptr inbounds %struct.merge_options, %struct.merge_options* %26, i32 0, i32 1
  %28 = load i8*, i8** %27, align 8
  store i8* %28, i8** %11, align 8
  %29 = load %struct.merge_options*, %struct.merge_options** %6, align 8
  %30 = getelementptr inbounds %struct.merge_options, %struct.merge_options* %29, i32 0, i32 0
  %31 = load i8*, i8** %30, align 8
  store i8* %31, i8** %12, align 8
  %32 = load %struct.diff_filespec*, %struct.diff_filespec** %10, align 8
  store %struct.diff_filespec* %32, %struct.diff_filespec** %13, align 8
  br label %33

33:                                               ; preds = %25, %17
  %34 = load %struct.merge_options*, %struct.merge_options** %6, align 8
  %35 = load i8*, i8** %7, align 8
  %36 = load %struct.diff_filespec*, %struct.diff_filespec** %8, align 8
  %37 = load %struct.diff_filespec*, %struct.diff_filespec** %13, align 8
  %38 = load i8*, i8** %11, align 8
  %39 = load i8*, i8** %12, align 8
  %40 = call i32 @_(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %41 = call i32 @_(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %42 = call i32 @handle_change_delete(%struct.merge_options* %34, i8* %35, i32* null, %struct.diff_filespec* %36, %struct.diff_filespec* %37, i8* %38, i8* %39, i32 %40, i32 %41)
  ret i32 %42
}

declare dso_local i64 @is_valid(%struct.diff_filespec*) #1

declare dso_local i32 @handle_change_delete(%struct.merge_options*, i8*, i32*, %struct.diff_filespec*, %struct.diff_filespec*, i8*, i8*, i32, i32) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
